objects/Entity__c.object
<CustomObject>
    <description>An entity is a business entity that is formed or incorporated at the state and federal level.</description>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>The account, or client, that this entity belongs to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Entities</relationshipLabel>
        <relationshipName>AccountEntities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ClientEntityId__c</fullName>
        <description>The client provided id for the entity</description>
        <inlineHelpText>The client provided id for the entity</inlineHelpText>
        <label>Client Entity ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityEID__c</fullName>
        <description>The Enterprise ID of this Entity.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID of this Entity.</inlineHelpText>
        <label>Entity EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EntityStructureRollupFormula__c</fullName>
        <label>EntityStructureRollupFormula</label>
        <summaryForeignKey>EntityStructure__c.EntityName__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IE2EntityId__c</fullName>
        <description>Stores the corp id from IE 2</description>
        <inlineHelpText>Stores the corp id from IE 2</inlineHelpText>
        <label>IE2EntityID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF1EntityId__c</fullName>
        <description>Stores the Entity ID from the old SF implementation</description>
        <inlineHelpText>Stores the Entity ID from the old SF implementation</inlineHelpText>
        <label>SF1EntityID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueAccountEntityFormula__c</fullName>
        <formula>Account__r.Name +  Name</formula>
        <label>Unique Account Entity</label>
        <type>Text</type>
    </fields>
    <label>Entity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IE2EntityId__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>